# bio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  project-spec.md  run-local.sh  run-podman.sh
.github/workflows/: container.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: blog.py  content.py
backend/app/content/: blog_markdown_reader.py  markdown_reader.py
backend/app/content/markdown/: bio.md  contact.md  education.md  experience.md  publications.md  skills.md  talks.md
backend/app/content/markdown/blogs/: fastapi-best-practices.md  react-performance-optimization.md
backend/app/core/: config.py
backend/app/models/: __init__.py  blog.py  portfolio.py
backend/app/services/: content_repository.py  content_store.py  markdown_renderer.py  medium_scraper.py
backend/app/static/: resume.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: About.css  About.jsx  Blog.css  Blog.jsx  BlogPost.css  BlogPost.jsx  Contact.css  Contact.jsx  Experience.css  Experience.jsx  Header.css  Header.jsx  Hero.css  Hero.jsx  Publications.css  Publications.jsx  Skills.css  Skills.jsx  Talks.css  Talks.jsx
